--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.7.3"
+    "public/index.php": {
+      "runtime": "vercel-php@0.8.2"
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/api/index.php" }
+    { "src": "/(.*)",  "dest": "/public/index.php" }
   ]
 }
