--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-  "functions": {
-    "public/index.php": {
-      "runtime": "vercel-php@0.8.2"
+  "version": 2,
+  "builds": [
+    {
+      "src": "public/index.php",
+      "use": "@vercel/php"
     }
-  },
+  ],
   "routes": [
-    { "src": "/(.*)",  "dest": "/public/index.php" }
+    { "src": "/(.*)", "dest": "/public/index.php" }
   ]
 }
